# app/Http/Requests/ApiGroup/StoreApiGroupRequest.php
@@ -1,0 +1,29 @@
+<?php
+
+namespace App\Http\Requests\ApiGroup;
+
+use Illuminate\Foundation\Http\FormRequest;
+
+class StoreApiGroupRequest extends FormRequest
+{
+    /**
+     * Determine if the user is authorized to make this request.
+     */
+    public function authorize(): bool
+    {
+        return true;
+    }
+
+    /**
+     * Get the validation rules that apply to the request.
+     *
+     * @return array<string, \Illuminate\Contracts\Validation\ValidationRule|array<mixed>|string>
+     */
+    public function rules(): array
+    {
+        return [
+            'name' => 'required',
+            'api' => 'required',
+        ];
+    }
+}
